--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "desafio rastreamento de usuarios",
   "main": "site/index.html",
   "scripts": {
+    "start": "http-server -p 8100",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
