inclusao de script de start na app aplicacao

--- a/aplicacao/package.json
+++ b/aplicacao/package.json
@@ -4,6 +4,7 @@
   "description": "Store user activities collected by trackingJS",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "felipe pereira",
