--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "site para o teste da SaaS Enterprise",
   "main": "index.html",
   "scripts": {
-    "dev": "grunt watch",
+    "dev": "grunt build-dev; cd dist;http-server -p 8100",
+    "start": "grunt build-prod; cd dist;http-server -p 8100",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -16,6 +17,12 @@
   "license": "ISC",
   "devDependencies": {
     "grunt": "^1.0.1",
-    "grunt-contrib-watch": "^1.0.0"
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-string-replace": "^1.3.1"
+  },
+  "dependencies": {
+    "http-server": "^0.10.0"
   }
 }
