--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.html",
   "scripts": {
     "dev": "grunt build-dev; cd dist;http-server -p 8100",
-    "start": "grunt build-prod; cd dist;http-server -p 8100",
+    "start": "http-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
